Online & batch prediction

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -31,7 +31,8 @@
    "id": "eda3d560-d8ea-4376-b737-798f6fee661b",
    "metadata": {},
    "source": [
-    " - Images dataset with objects to identify"
+    " - Images dataset with objects to identify\n",
+    " \t- Dataset used in this notebook can be found [here](https://public.roboflow.com/object-detection/packages-dataset/5)"
    ]
   },
   {
@@ -54,6 +55,7 @@
     " - Evaluate the trained model\n",
     " - Create and endpoint for deploy model \n",
     " - Perform online prediction on new data\n",
+    " - [Optional] Creating new dataset using existing annotatons from Vertex AI managed dataset\n",
     " - Cleanup"
    ]
   },
@@ -131,7 +133,7 @@
    "id": "4d88fbf5-8e3a-49c0-b20b-f75dd004a529",
    "metadata": {},
    "source": [
-    "##### Let's create image dataset in the Vertex AI and import all images into our dataset\n",
+    "Let's create image dataset in the Vertex AI and import all images into our dataset\n",
     "\n",
     "From the GCP console left task list pane, find and click on `Vertex AI` and then click on `Dataset` option to create a new dataset"
    ]
@@ -149,7 +151,7 @@
    "id": "e47b49bb-2bcf-4f3c-9ed0-fd605052f414",
    "metadata": {},
    "source": [
-    "<img src=\"https://github.com/nishitpatel01/google-cloud/blob/dfa0f02d540c5b7f0a4e054ba23f5dc0cf698a3d/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\" />"
+    "<img src=\"https://github.com/nishitpatel01/google-cloud/blob/ac45dc51ce9a5c2f29a29416256e9e64a7fcda5a/demos/files/images/dm-01-gcp-console-vertex-ai-image-dataset.png\" />"
    ]
   },
   {
@@ -258,7 +260,7 @@
     "    display_name: str,\n",
     "    dataset_id: str,\n",
     "    model_display_name: str,\n",
-    "    location: str = \"us-central1\",\n",
+    "    location: str,\n",
     "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
     "):\n",
     "    # The AI Platform services require regional API endpoints.\n",
@@ -348,7 +350,8 @@
     "train_package_size_detection(PROJECT_ID,  \n",
     "                             \"package_size_detection_model_v1\", \n",
     "                             DATASET_ID,\n",
-    "                             \"package_size_detection_model_v1\"\n",
+    "                             \"package_size_detection_model_v1\",\n",
+    "                             LOCATION\n",
     "                            )"
    ]
   },
@@ -400,7 +403,7 @@
     "            }\n",
     "        )\n",
     "\n",
-    "evaluations = model_client.list_model_evaluations(parent=f'projects/{PROJECT_ID}/locations/{LOCATION}/models/2221017886154031104')  \n",
+    "evaluations = model_client.list_model_evaluations(parent=f'projects/{PROJECT_ID}/locations/{LOCATION}/models/2221017886154031104')  #replace this model id with your model id\n",
     "for val in evaluations:\n",
     "    eval_group = re.search('evaluations/(.*)', val.name)\n",
     "    model_group = re.search('models/(.*)/evaluations', val.name)\n",
@@ -6894,19 +6897,19 @@
      "output_type": "stream",
      "text": [
       "INFO:google.cloud.aiplatform.models:Creating Endpoint\n",
-      "INFO:google.cloud.aiplatform.models:Create Endpoint backing LRO: projects/474014863033/locations/us-central1/endpoints/2822288018826592256/operations/1436297055885590528\n",
-      "INFO:google.cloud.aiplatform.models:Endpoint created. Resource name: projects/474014863033/locations/us-central1/endpoints/2822288018826592256\n",
+      "INFO:google.cloud.aiplatform.models:Create Endpoint backing LRO: projects/474014863033/locations/us-central1/endpoints/7482669208224923648/operations/8633664986935197696\n",
+      "INFO:google.cloud.aiplatform.models:Endpoint created. Resource name: projects/474014863033/locations/us-central1/endpoints/7482669208224923648\n",
       "INFO:google.cloud.aiplatform.models:To use this Endpoint in another session:\n",
-      "INFO:google.cloud.aiplatform.models:endpoint = aiplatform.Endpoint('projects/474014863033/locations/us-central1/endpoints/2822288018826592256')\n",
+      "INFO:google.cloud.aiplatform.models:endpoint = aiplatform.Endpoint('projects/474014863033/locations/us-central1/endpoints/7482669208224923648')\n",
       "package-object-detection-endpoint\n",
-      "projects/474014863033/locations/us-central1/endpoints/2822288018826592256\n"
+      "projects/474014863033/locations/us-central1/endpoints/7482669208224923648\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<google.cloud.aiplatform.models.Endpoint object at 0x7fe2068f02d0> \n",
-       "resource name: projects/474014863033/locations/us-central1/endpoints/2822288018826592256"
+       "<google.cloud.aiplatform.models.Endpoint object at 0x7f1430f48d10> \n",
+       "resource name: projects/474014863033/locations/us-central1/endpoints/7482669208224923648"
       ]
      },
      "execution_count": 11,
@@ -6917,6 +6920,17 @@
    "source": [
     "end_point = create_endpoint(PROJECT_ID, \"package-object-detection-endpoint\", LOCATION)\n",
     "end_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2720add5-30e6-4ac7-a3cf-8a8c71833286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get model endpoint id\n",
+    "\n"
    ]
   },
   {
@@ -6981,7 +6995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c1822a1e-5203-4629-b2db-62196bbf921b",
    "metadata": {},
    "outputs": [
@@ -6989,9 +7003,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:google.cloud.aiplatform.models:Deploying model to Endpoint : projects/474014863033/locations/us-central1/endpoints/2822288018826592256\n",
-      "INFO:google.cloud.aiplatform.models:Deploy Endpoint model backing LRO: projects/474014863033/locations/us-central1/endpoints/2822288018826592256/operations/2728830148940922880\n",
-      "INFO:google.cloud.aiplatform.models:Endpoint model deployed. Resource name: projects/474014863033/locations/us-central1/endpoints/2822288018826592256\n",
+      "INFO:google.cloud.aiplatform.models:Deploying model to Endpoint : projects/474014863033/locations/us-central1/endpoints/7482669208224923648\n",
+      "INFO:google.cloud.aiplatform.models:Deploy Endpoint model backing LRO: projects/474014863033/locations/us-central1/endpoints/7482669208224923648/operations/822171433261072384\n",
+      "INFO:google.cloud.aiplatform.models:Endpoint model deployed. Resource name: projects/474014863033/locations/us-central1/endpoints/7482669208224923648\n",
       "package_size_detection_model_v1\n",
       "projects/474014863033/locations/us-central1/models/2221017886154031104\n"
      ]
@@ -6999,17 +7013,17 @@
     {
      "data": {
       "text/plain": [
-       "<google.cloud.aiplatform.models.Model object at 0x7fe2068f0110> \n",
+       "<google.cloud.aiplatform.models.Model object at 0x7f1430f51750> \n",
        "resource name: projects/474014863033/locations/us-central1/models/2221017886154031104"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_path = \"projects/nishitp-daml/locations/us-central1/models/2221017886154031104\"\n",
+    "model_path = model.resource_name\n",
     "deploy_package_detection_model(PROJECT_ID, LOCATION, model_path, end_point, \"package_detection_model_v1\", 0, None, 1, 1, (), True)"
    ]
   },
@@ -7046,8 +7060,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20691845-9c5c-4af2-a2b8-7c4f2e4acf26",
+   "metadata": {},
+   "source": [
+    "### Online Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5da197d3-b7e3-4c6b-84f4-80ab49e56737",
    "metadata": {},
    "outputs": [],
@@ -7058,7 +7080,7 @@
     "    project: str,\n",
     "    endpoint_id: str,\n",
     "    filename: str,\n",
-    "    location: str = \"us-central1\",\n",
+    "    location: str,\n",
     "    api_endpoint: str = \"us-central1-aiplatform.googleapis.com\",\n",
     "):\n",
     "    # The AI Platform services require regional API endpoints.\n",
@@ -7085,9 +7107,7 @@
     "    response = client.predict(\n",
     "        endpoint=endpoint, instances=instances, parameters=parameters\n",
     "    )\n",
-    "    print(\"response\")\n",
-    "    print(\" deployed_model_id:\", response.deployed_model_id)\n",
-    "    # See gs://google-cloud-aiplatform/schema/predict/prediction/image_object_detection_1.0.0.yaml for the format of the predictions.\n",
+    "    \n",
     "    predictions = response.predictions\n",
     "    for prediction in predictions:\n",
     "        print(\" prediction:\", dict(prediction))"
@@ -7095,18 +7115,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bd0915c4-cf97-45d2-8a11-0a398cde727a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " prediction: {'confidences': [0.977389872], 'ids': ['8059155249295785984'], 'bboxes': [[0.532388628, 0.637344182, 0.714642763, 0.819512486]], 'displayNames': ['small_package']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = \"package-images_IMG_6817_jpg.rf.2b27ee700087707e9721d9ef99180953.jpg\"\n",
+    "end_pt_str = end_point.resource_name\n",
+    "end_point_id = end_pt_str[end_pt_str.rindex('/')+1:]\n",
+    "get_package_detection_predictions(PROJECT_ID, end_point_id, filename, LOCATION)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "383e254b-11bd-428e-9ce0-cdf229cee0a7",
+   "metadata": {},
+   "source": [
+    "### Batch Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "708faa52-77bc-4d27-9bf3-859e34515650",
+   "metadata": {},
+   "source": [
+    "Batch predictions are async type requests which can directly be requested to model resource in `Vertex AI`. You don't need to deploy the model to an endpoint to perform batch predictions. To do this, you will need to specify an input resource and an location where output or model results can be written and stored. \n",
+    "\n",
+    "For batch prediction, AutoML image model requires an input resource in the form of [JSON lines](https://jsonlines.org/) and Google cloud storage bucket to store the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "25ea71ea-e7b2-48e2-a3d5-8d8a89e38b70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_package_detection_predictions(PROJECT_ID, LOCATION, model_path)"
+    "GCS_IN_PATH = \"gs://ds-ml-demos/package-image-batch-predictions/input/batch-prediction-inputs.jsonl\"\n",
+    "GCS_OUT_PATH = \"gs://ds-ml-demos/package-image-batch-predictions/output/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8d29cd7b-be4e-42ff-82bc-27ec5f6ee82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function for batch prediction\n",
+    "\n",
+    "def get_package_detection_batch_predictions(\n",
+    "    project: str,\n",
+    "    location: str,\n",
+    "    model_resource_name: str,\n",
+    "    job_display_name: str,\n",
+    "    gcs_source,\n",
+    "    gcs_destination: str,\n",
+    "    sync: bool = True,\n",
+    "):\n",
+    "    aiplatform.init(project=project, location=location)\n",
+    "\n",
+    "    model = aiplatform.Model(model_resource_name)\n",
+    "\n",
+    "    batch_prediction_job = model.batch_predict(\n",
+    "        job_display_name=job_display_name,\n",
+    "        gcs_source=gcs_source,\n",
+    "        gcs_destination_prefix=gcs_destination,\n",
+    "        sync=sync,\n",
+    "    )\n",
+    "\n",
+    "    batch_prediction_job.wait()\n",
+    "\n",
+    "    print(batch_prediction_job.display_name)\n",
+    "    print(batch_prediction_job.resource_name)\n",
+    "    print(batch_prediction_job.state)\n",
+    "    return batch_prediction_job\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9098e54d-d9a6-4717-afef-84fd721aac44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:google.cloud.aiplatform.jobs:Creating BatchPredictionJob\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob created. Resource name: projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656\n",
+      "INFO:google.cloud.aiplatform.jobs:To use this BatchPredictionJob in another session:\n",
+      "INFO:google.cloud.aiplatform.jobs:bpj = aiplatform.BatchPredictionJob('projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656')\n",
+      "INFO:google.cloud.aiplatform.jobs:View Batch Prediction Job:\n",
+      "https://console.cloud.google.com/ai/platform/locations/us-central1/batch-predictions/3383341314689990656?project=474014863033\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_RUNNING\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656 current state:\n",
+      "JobState.JOB_STATE_SUCCEEDED\n",
+      "INFO:google.cloud.aiplatform.jobs:BatchPredictionJob run completed. Resource name: projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656\n",
+      "package_detection_batch_prediction_job\n",
+      "projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656\n",
+      "JobState.JOB_STATE_SUCCEEDED\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<google.cloud.aiplatform.jobs.BatchPredictionJob object at 0x7f1430c67710> \n",
+       "resource name: projects/474014863033/locations/us-central1/batchPredictionJobs/3383341314689990656"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_package_detection_batch_predictions(PROJECT_ID, \n",
+    "                                        LOCATION,\n",
+    "                                        model_path,\n",
+    "                                        \"package_detection_batch_prediction_job\",\n",
+    "                                        GCS_IN_PATH,\n",
+    "                                        GCS_OUT_PATH\n",
+    "                                       )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "356b87e9-b424-47cb-8e64-2262fa238230",
+   "metadata": {},
+   "source": [
+    "Once you submit the batch prediction job to the `Vertex AI`, you will see it in console and depending on how many instances you have in your prediction request it can take a while to completely finish this batch prediction job. You can see in below screenshot how batch prediction job looks in `Vertex AI` console. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0ff05d2-b882-48af-aa58-743ce3d05a50",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-09-gcp-console-batch-prediction-pipeline.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2382bf67-a25c-4c12-9b09-3f29c765878a",
+   "metadata": {},
+   "source": [
+    "Once the job is finished, you can see `Status` as complete like below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ab5a5f9-093d-44be-9f18-4a7ed6260992",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-10-gcp-console-batch-prediction-complete.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d049bf93-789b-47c1-8027-73a5782c4e0e",
+   "metadata": {},
+   "source": [
+    "You can navigate to your cloud storage batch prediction output bucket to see the prediction file that was created as a result of this job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b61ad029-fd3e-43e9-a034-38a57b60c00d",
+   "metadata": {},
+   "source": [
+    "![](files/images/dm-11-gcp-console-storage-batch-prediction-file.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473971cc-eb26-4a79-b3cb-2253f79aa017",
+   "id": "2416f0dc-7759-4750-ba6d-f825188297bf",
    "metadata": {},
    "outputs": [],
    "source": []
