Spacing between markdowns

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -7537,9 +7537,31 @@
    "id": "4783aaed-d3c9-4458-9456-a6b4f3af8221",
    "metadata": {},
    "source": [
-    "Once you have labeled images dataset, you can export the annotations and make changes in case you want to reuse dataset for different purpose or change the labels itself in the dataset. This is a great option that saves ton of time that is spent doing manually otherwise. Basically by exporting the annotations of an existing dataset, you can make necessary changes both in label and other metadata of images to train other models. \n",
-    "\n",
+    "Once you have labeled images dataset, you can export the annotations and make changes in case you want to reuse dataset for different purpose or change the labels itself in the dataset. This is a great option that saves ton of time that is spent doing manually otherwise. Basically by exporting the annotations of an existing dataset, you can make necessary changes both in label and other metadata of images to train other models. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67bc22ff-5702-4c06-ae75-5b2b7b67f61f",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ae4eb7-2031-44aa-a087-7b615517f1ec",
+   "metadata": {},
+   "source": [
     "For example, the dataset we used in this notebook for object detection, can also be used as image classification where we would remove the bounding boxes and may modify the label class (In this case we don't need as packages stays the same)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8f154a9-e2d6-45aa-a73e-76354d77a0f7",
+   "metadata": {},
+   "source": [
+    " "
    ]
   },
   {
@@ -7878,14 +7900,6 @@
    "source": [
     "![dm-16-gcp-console-vertex-ai-dataset-annotations.png](attachment:d833b1a4-bd32-44e6-b9db-aa62deef3ebc.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19ed2842-8959-47f0-b0ea-5b638971b371",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
