New folder and files add

--- a/demos/dm-01-automl-object-detection-using-api.ipynb
+++ b/demos/dm-01-automl-object-detection-using-api.ipynb
@@ -7905,14 +7905,14 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "managed-notebooks.m87",
+   "name": "tf2-gpu.2-8.m91",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cu110:latest"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-8:m91"
   },
   "kernelspec": {
-   "display_name": "Python (Local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "local-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
