TSI notebook code change

--- a/Demos/Real time anomaly detection using time series API/03-add-streaminig-data-into-ts-dataset.ipynb
+++ b/Demos/Real time anomaly detection using time series API/03-add-streaminig-data-into-ts-dataset.ipynb
@@ -5,7 +5,7 @@
    "id": "f8f81c9b-2c4a-4caf-a4d4-a524bedc7123",
    "metadata": {},
    "source": [
-    "# Testing the Timeseries Insights API with Jabil's use case"
+    "# Timeseries Insights API with Streaming Event Appends and Query"
    ]
   },
   {
