--- a/Demos/Real time anomaly detection using time series API/01-timeseries-anomaly-detection.ipynb
+++ b/Demos/Real time anomaly detection using time series API/01-timeseries-anomaly-detection.ipynb
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "# write data to json\n",
-    "df_out.to_json(\"files/jabil/df_converted.json\", orient=\"records\", lines=True)"
+    "df_out.to_json(\"files/df_converted.json\", orient=\"records\", lines=True)"
    ]
   },
   {
@@ -391,25 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "387b8c7f-2188-413d-a17a-3e3c27a1775d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ya29.c.b0AXv0zTMcdnltEQck0ETQYTEZcGt5lUJaWs60D66OkcnRiiGVIqKqMTNWOAHpm8ZYSX64TZDsxq7m2dCbvjXYwRB1CXK-UmcyF5-OGJQLKNDsrmMZa_9CnRL9oUQft12HivOsGqmfyRJWMS_hWccRGgxknttsrRD49iQ-9Bnv-L-jyvVzn_bgUdk7S1PH2ybMNCY2F5owHGE..........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Loading credentials into auth_token - this is temp token that needs to be refreshed\n",
     "token=GoogleCredentials.get_application_default().get_access_token().access_token\n",
-    "token"
+    "token "
    ]
   },
   {
@@ -450,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile client-files/jabil/create.json\n",
+    "%%writefile client-files/tsi/create.json\n",
     "\n",
     "{\n",
     "    name: \"jbl_timeseries_full\",\n",
@@ -474,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('client-files/jabil/create.json', 'r') as myfile:\n",
+    "with open('client-files/tsi/create.json', 'r') as myfile:\n",
     "    data=myfile.read()\n",
     "    \n",
     "print(data)"
