Notebook title change

--- a/Demos/Real time anomaly detection using time series API/02-timeseries-anomaly-detection-with-append.ipynb
+++ b/Demos/Real time anomaly detection using time series API/02-timeseries-anomaly-detection-with-append.ipynb
@@ -5,7 +5,7 @@
    "id": "f28ad9ce-efc2-4120-a384-8d51041f28f6",
    "metadata": {},
    "source": [
-    "# Timeseries Insights API - Anomaly Detection Testing"
+    "# Timeseries Insights API - Anomaly Detection"
    ]
   },
   {
