description verbiage changes

--- a/AI & Machine Learning/02 - AutoML/02-01-automl-object-detection-using-api.ipynb
+++ b/AI & Machine Learning/02 - AutoML/02-01-automl-object-detection-using-api.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Summary\n",
     "\n",
-    "In this notebook, we'll use Vertex AI to train custom object detection model using image dataset. After training, we will create an endpoint and deploy the model to that endpoint. Then we will use the deploymed model for online & batch predictions. "
+    "This notebbok covers Vertex AI custom object detection model training using image dataset. This includes training, endpoint creation, model deployment to an endpoint and serving model endpoint for batch and online inference. "
    ]
   },
   {
