modified dimension in create dataset payload

--- a/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
+++ b/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
@@ -95,7 +95,7 @@
     "PROJECT_ID = project[0]\n",
     "REGION = \"us-central1\"\n",
     "BUCKET_NAME = \"<YOUR-BUCKET-NAME>\"\n",
-    "FILE_PATH = \"<local-path-to-your-processed-file>/data-file.json\"\n",
+    "FILE_PATH = \"<local-path-to-your-processed-file>/timeseries-anomaly.json\"\n",
     "\n",
     "print(PROJECT_ID, REGION, BUCKET_NAME)"
    ]
@@ -219,11 +219,11 @@
     "        \"measure\",\n",
     "        \"Humidity\",\n",
     "        \"Light\",\n",
-    "        \"h2\",\n",
+    "        \"h2_raw\",\n",
     "        \"temp\",\n",
     "    ],\n",
     "    \"dataSources\": [\n",
-    "        {\"uri\": f\"gs://{BUCKET_NAME}/data-file.json\"} \n",
+    "        {\"uri\": f\"gs://{BUCKET_NAME}/timeseries-anomaly.json\"} \n",
     "    ], \n",
     "} "
    ]
