--- a/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
+++ b/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
@@ -475,6 +475,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3f607858-325f-4a8a-aa2f-c49d362ce40a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = \"sensor-data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "db42e53b-e5b7-47a6-ab22-2a20ee6bc79d",
    "metadata": {},
    "outputs": [],
@@ -482,7 +492,7 @@
     "# Create dataset using API\n",
     "\n",
     "anomaly_dataset_payload = {\n",
-    "    \"name\": \"sensor-data\", \n",
+    "    \"name\": dataset, \n",
     "    \"ttl\": \"3000000s\", # Set this only if using appending later. This tells API what records to discard. \n",
     "    \"dataNames\": [\n",
     "        \"measure\",\n",
@@ -494,9 +504,7 @@
     "    \"dataSources\": [\n",
     "        {\"uri\": f\"gs://{BUCKET_NAME}/timeseries-anomaly.json\"} \n",
     "    ], \n",
-    "} \n",
-    "\n",
-    "dataset = \"sensor-data\""
+    "} "
    ]
   },
   {
@@ -735,7 +743,46 @@
    "id": "3e527069-7300-4713-bd48-be7e9da66320",
    "metadata": {},
    "source": [
-    "# Todo: evaluate slice"
+    "Once the event has been added `evaluateSlice` method can be used to evaluate data slice in a loaded dataset. This is an option you can use to view the timeseries built by the API. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04cc5cd2-8fcc-4795-8cd8-cc62a43783be",
+   "metadata": {},
+   "source": [
+    "Following is the sample json payload illustrating an event that we want to evaluate. The returned object after calling the [evaluateSlice](https://cloud.google.com/timeseries-insights/docs/reference/rest/v1/EvaluatedSlice) method is an instance of EvaluatedSlice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cb12e0b-00ca-4c6e-80ed-fa2b0024b63b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_slice_payload = {\n",
+    "    \"detectionTime\": \"2021-08-09T21:31:54+00:00\",\n",
+    "      \"pinnedDimensions\": [\n",
+    "        {\n",
+    "          \"name\": \"measure\",\n",
+    "          \"stringVal\": \"LTTH\"\n",
+    "        }\n",
+    "  ],\n",
+    "    \"timeseriesParams\": {\n",
+    "        \"forecastHistory\": \"259200s\",\n",
+    "        \"granularity\": \"1800s\",\n",
+    "        \"metric\": \"temp\"\n",
+    "        },\n",
+    "    \"forecastParams\": {\n",
+    "        \"seasonalityHint\": \"DAILY\"\n",
+    "        },\n",
+    "}\n",
+    "\n",
+    "dataset = \"sensor-data\"\n",
+    "query_ds_endpt = f'https://timeseriesinsights.googleapis.com/v1/projects/{PROJECT_ID}/datasets/{dataset}:evaluateSlice'\n",
+    "res = query_ts(method=\"POST\", endpoint=query_ds_endpt, data=evaluate_slice_payload, auth_token=token_array[0])\n",
+    "res"
    ]
   },
   {
@@ -1041,12 +1088,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a824c2-7bb5-4756-9896-003a8470e07b",
+   "id": "026cac23-10bd-49c2-aba7-64dbf5949fe4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample json input payload \n",
+    "REGION = \"your-cloud-function-region\"\n",
+    "TOPIC_NAME = \"sensor-data-processing\"\n",
+    "SOURCE_URI = \"cloud-function-file-directory\"\n",
+    "ENTRY_POINT = \"detect_anomaly\"\n",
     "\n",
+    "# create to pub/sub topic\n",
+    "gcloud pubsub topics create TOPIC_NAME\n",
+    "\n",
+    "# Create cloud function\n",
+    "gcloud functions deploy sensor-data-processing \\\n",
+    "--runtime=python310 \\\n",
+    "--region=REGION \\\n",
+    "--source=SOURCE_URI \\\n",
+    "--entry-point=ENTRY_POINT \\\n",
+    "--trigger-topic=TOPIC_NAME \\\n",
+    "--allow-unauthenticated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4cd41c8-af94-4e4b-bc21-e9143d21b7ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create query payload\n",
     "query_payload = {\n",
     "               \"attributes\": {\n",
     "                   \"time\": \"1664826843\", \n",
@@ -1062,6 +1133,17 @@
     "                   \"anomaly_threshold\": \"1.0\"\n",
     "               }\n",
     "            }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b11f4f7d-4eb5-490f-9253-0458c559bc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Publish message to cloud function\n",
+    "gcloud pubsub topics publish TOPIC_NAME --message=query_payload"
    ]
   }
  ],
