input payload attribute name value update

--- a/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
+++ b/AI & Machine Learning/01 - Pre-built ML APIs/01-01-realtime-anomaly-detection-using-timeseries-insights-api.ipynb
@@ -1123,7 +1123,7 @@
     "                   \"time\": \"1664826843\", \n",
     "                   \"temperature\": \"34.18\",\n",
     "                   \"light\": \"23\",\n",
-    "                   \"h2\": \"1040\",\n",
+    "                   \"h2_raw\": \"1040\",\n",
     "                   \"humidity\": \"26\",\n",
     "                   \"dataset\": \"sensor-data\",\n",
     "                   \"metric\": [\"temp\"],\n",
