--- a/AI & Machine Learning/01 - Pre-built ML APIs/01-02-sentiment-analysis-and-entity-extraction-using-cloud-natural-language-api.ipynb
+++ b/AI & Machine Learning/01 - Pre-built ML APIs/01-02-sentiment-analysis-and-entity-extraction-using-cloud-natural-language-api.ipynb
@@ -51,7 +51,7 @@
    "id": "8cb425ba-967c-4c92-a33e-5fd0af74841a",
    "metadata": {},
    "source": [
-    "## Data "
+    "## Dataset"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "id": "204d0c34-9a29-414e-ab0b-90ca48fc2c26",
    "metadata": {},
    "source": [
-    "I am using `BLIND FATE By Toby Bradley` in txt format. This txt file is saved in my project's cloud storage bucket"
+    "I am using `BLIND FATE by Toby Bradley` from [Stories and Fictions](http://www.textfiles.com/stories/) in txt format. This txt file is saved in my project's cloud storage bucket"
    ]
   },
   {
