GenAI notebook add

--- a/AI & Machine Learning/07 - GenAI/07-02-Language/07-02-01-genai-intro-using-console.ipynb
+++ b/AI & Machine Learning/07 - GenAI/07-02-Language/07-02-01-genai-intro-using-console.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b9efd87-3cd4-496a-9a91-e68a2561a888",
+   "id": "bfac734d-a3fb-41c1-9463-f20e6f4d0119",
    "metadata": {},
    "source": [
-    "# Introduction to Generative AI in Vertex AI "
+    "# Introduction to Gogole cloud Generative AI (PaLM API) using Google cloud console"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cf30f95-dbd3-4ee0-8655-35e1fe30370c",
+   "id": "c7fd1249-b21b-4866-b492-984c8910965d",
    "metadata": {},
    "source": [
     "### Summary\n",
     "\n",
-    "This notebooks provides introductory overview of Generative AI studio models, Model garden within Vertex AI. The notebook also demonstrates how to get started with these models using python sdk as well as using GenAI UI. "
+    "This notebooks provides introductory overview of Generative AI studio models within Vertex AI. The notebook also demonstrates how to get started with these models using UI. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c0fc7a-e1dd-4946-b1b0-300d1c43e384",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
