GenAI Notebook update

--- a/AI & Machine Learning/07 - GenAI/07-02-Language/07-02-02-genai-intro-using-pythonSDK.ipynb
+++ b/AI & Machine Learning/07 - GenAI/07-02-Language/07-02-02-genai-intro-using-pythonSDK.ipynb
@@ -5,7 +5,7 @@
    "id": "5b9efd87-3cd4-496a-9a91-e68a2561a888",
    "metadata": {},
    "source": [
-    "# Introduction to Gogole cloud Generative AI (PaLM API) using Python SDK"
+    "# Introduction to Google cloud Generative AI (PaLM API) using Python SDK"
    ]
   },
   {
