--- a/AI & Machine Learning/07 - GenAI/07-04-Langchain/07-04-01-Langchain-Introduction.ipynb
+++ b/AI & Machine Learning/07 - GenAI/07-04-Langchain/07-04-01-Langchain-Introduction.ipynb
@@ -5,7 +5,7 @@
    "id": "b071fad7-8928-43b4-bc07-c215981ac621",
    "metadata": {},
    "source": [
-    "# Gentle Introduction to Langchain"
+    "# Recommendations and Matching Basics using Langchain and Vertex GenAI "
    ]
   },
   {
